<resources>
    <string name="app_name">kleine</string>
    <string name="g_app_name">kleine.</string>
    <string name="g_the_right_address">The Right Address \n For Shopping \n Anyday</string>

    <!--    <string name="g_for_shopping">For Shopping</string>-->
    <!--    <string name="g_any_day">Anyday</string>-->

    <string name="g_best_quality">It is now very easy to reach the \n best quality among all the \n products on the internet!</string>
    <string name="g_start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_your_orders">All your orders in one \n saved package</string>
    <string name="g_register">Register</string>
    <string name="g_let_s_register">Let\'s Register</string>
    <string name="g_do_you_have_an_account_log_in">Do you have an account? log in</string>
    <string name="g_first_name">First Name</string>
    <string name="g_email">Email</string>
    <string name="g_second_name">Last Name</string>
    <string name="g_password">Password</string>
    <string name="g_don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="g_let_s_login">Let\'s Login</string>
    <string name="g_log_in">Log in</string>
    <string name="g_google">Google</string>
    <string name="g_facebook">Facebook</string>
    <string name="first_name_cant_be_empty">First name can\'t be empty</string>
    <string name="last_name_cant_be_empty">Last name can\'t be empty</string>
    <string name="email_cant_be_empty">Email can\'t be empty</string>
    <string name="password_cant_be_empty">password can\'t be empty</string>
    <string name="password_at_least_six">password should have 6</string>
    <string name="valid_email">check your email</string>
    <string name="signed_up_successfully">you have created new account, login now</string>
    <string name="g_home">Home</string>
    <string name="g_search">search</string>
    <string name="g_cart">Cart</string>
    <string name="g_profile">profile</string>
    <string name="g_add_to_cart">Add to cart</string>
    <string name="g_search_now">Search Now</string>
    <string name="g_best_deals">Best Deals</string>
    <string name="g_chair">Chair</string>
    <string name="g_cupboard">Cupboard</string>
    <string name="g_table">Table</string>
    <string name="g_accessory">Accessory</string>
    <string name="g_furniture">Furniture</string>
    <string name="g_enlightening">Enlightening</string>
    <string name="g_best_products">Best Products</string>
    <string name="g_see_product">See product</string>
    <string name="g_color">Color</string>
    <string name="g_size">Size</string>
    <string name="g_add_to_card">Add to Card</string>
    <string name="g_added">Added</string>
    <string name="g_already_added">Product is in your cart</string>
    <string name="g_please_select_color">Please select color</string>
    <string name="g_please_select_size">Please select size</string>
    <string name="g_my_cart">My Cart</string>
    <string name="g_checkout">Checkout</string>
    <string name="g_total">Total:</string>
    <string name="g_your_shopping_cart_is_empty">Your Shopping Cart\n Is Empty</string>
    <string name="g_delete_item">Delete item</string>
    <string name="g_are_you_sure_you_want_to_delete_this_item_from_cart">Are you sure you want to delete this item from cart ?</string>
    <string name="g_no">No</string>
    <string name="g_yes">Yes</string>
    <string name="g_categories">Categories</string>
    <string name="g_cancel">Cancel</string>
    <string name="g_payment_methods">Payment methods</string>
    <string name="payment_explanation">Currently Keline only supports payments when receiving the product, more options are coming soon.</string>
    <string name="g_shipping">Shipping</string>
    <string name="g_full_name">Full Name</string>
    <string name="g_city">City</string>
    <string name="g_phone">Phone</string>
    <string name="g_state">State</string>
    <string name="g_save">Save</string>
    <string name="g_address">Address</string>
    <string name="g_address_location_ie_home">Address Location ie. Home</string>
    <string name="g_update">Update</string>
    <string name="g_place_order">Place Order</string>
    <string name="g_delete">Delete</string>
    <string name="g_select_address_error">Select or add new address !</string>
    <string name="g_place_order_confirmation">Are you sure you want to place this order ?</string>
    <string name="g_confirm">Confirm</string>
    <string name="place_order_error">Error occurred try again later or contact us</string>
    <string name="g_payment_failed">Your Order is Failed !</string>
    <string name="g_payment_success">Your Order is Completed</string>
    <string name="order_error_message">Try again later, if this error keeps showing up please contact us .</string>
    <string name="order_success_message">We received your order and we will contact you through a phone call in the next 24H
    \n your order number is #</string>
    <string name="g_track_order">You can track your order by going to your profile and select all orders then select your recent order.</string>
    <string name="g_settings">Settings</string>
    <string name="g_edit_personal_details">Edit personal details</string>
    <string name="g_orders">Orders</string>
    <string name="g_order">Order</string>
    <string name="g_all_orders">All Orders</string>
    <string name="g__track_order">Track Order</string>
    <string name="g_notifications">Notifications</string>
    <string name="g_regional">Regional</string>
    <string name="g_language">Language</string>
    <string name="g_logout">Logout</string>
    <string name="g_billing">Billing And Addresses</string>
    <string name="g_version">Version</string>
    <string name="error_occurred">Oops error occurred</string>
    <string name="g_edit_profile">Edit Profile</string>
    <string name="g_change_forgot_password">Forgot/Change password</string>
    <string name="g_cant_change_email_message">You cannot change your email address, if you are looking to change it please contact with us</string>
    <string name="select_profile_image">Select profile image</string>
    <string name="g_no_orders_to_show">No orders to show</string>
    <string name="g_reset_password">Reset Password</string>
    <string name="g_reset_password_message">We will send you password reset link on your Email</string>
    <string name="g_send">Send</string>
    <string name="g_password_reset">We sent reset password link to your email</string>
    <string name="g_order_placed">Order Placed</string>
    <string name="g_shipped">Shipped</string>
    <string name="g_delivered">Delivered</string>
    <string name="g_products">Products</string>
    <string name="g_coming_soon">This feature is not available yet</string>
    <string name="g_english">English</string>
    <string name="g_arabic">عربي</string>
    <string name="g_forgot_password">Forgot Password</string>
    <string name="g_check_your_email">Check your Email</string>
    <string name="street">Street</string>
    <string name="g_order_details">Order Details</string>
    <string name="product_added">Product added to your cart</string>
    <string name="switch_account">Switch Account</string>
    <string name="open_menu">Open Menu</string>
    <string name="close_menu">Close Menu</string>
    <string name="my_store">My Store</string>
    <string name="g_total_sales">Total Sales</string>
    <string name="today_sales">Today Sales</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="help">Help</string>
    <string name="help_text">Got a question? We\'re here to answer!</string>

</resources>