<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/secondscreen_background"/>


    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_110sdp"
        android:drawableStart="@drawable/ic_kleine_shape"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/g_app_name"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_lets_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/poppins_thin"
        android:gravity="center"
        android:text="@string/g_let_s_login"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_27sdp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

    <TextView
        android:id="@+id/tv_dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/g_don_t_have_an_account_register"
        android:textColor="@color/g_hint"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_lets_login"
        app:layout_constraintTop_toBottomOf="@id/tv_lets_login" />

    <EditText
        android:id="@+id/ed_email_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/g_email"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tv_dont_have_an_account"
        />

    <EditText
        android:id="@+id/ed_password_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:hint="@string/g_password"
        android:password="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/ed_email_login" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/poppins_light"
        android:text="@string/g_log_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/ed_password_login" />

    <ImageView
        android:id="@+id/btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:src="@drawable/ic_facebook_login"
        android:layout_marginTop="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g_facebook"
        app:layout_constraintStart_toStartOf="@id/btn_facebook"
        app:layout_constraintEnd_toEndOf="@id/btn_facebook"
        app:layout_constraintTop_toTopOf="@id/btn_facebook"
        app:layout_constraintBottom_toBottomOf="@id/btn_facebook"/>

    <ImageView
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:src="@drawable/ic_google_login"
        android:layout_marginTop="@dimen/_10sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/g_google"
        app:layout_constraintStart_toStartOf="@id/btn_google"
        app:layout_constraintEnd_toEndOf="@id/btn_google"
        app:layout_constraintTop_toTopOf="@id/btn_google"
        app:layout_constraintBottom_toBottomOf="@id/btn_google"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.89" />

</androidx.constraintlayout.widget.ConstraintLayout>