<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/secondscreen_background"
    android:scaleType="centerCrop"/>


    <TextView
        android:id="@+id/tv_app_name"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        android:textColor="@color/g_black"
        android:text="@string/g_app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_15sdp"
        android:drawableStart="@drawable/ic_kleine_shape"
        android:drawablePadding="@dimen/_5sdp"
        />

    <TextView
        android:id="@+id/tv_right_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_thin"
        android:gravity="center"
        android:text="@string/g_the_right_address"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="@id/tv_app_name"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintStart_toStartOf="@id/tv_app_name"
        android:layout_marginTop="@dimen/_40sdp"
        />

    <TextView
        android:id="@+id/tv_best_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/poppins_light"
        android:gravity="center"
        android:text="@string/g_best_quality"
        android:textColor="@color/g_hint"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@id/tv_right_place"
        app:layout_constraintStart_toStartOf="@id/tv_right_place"
        app:layout_constraintTop_toBottomOf="@id/tv_right_place" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_splash_register"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        android:text="@string/g_register"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_best_quality"
        app:layout_constraintStart_toStartOf="@id/tv_best_quality"
        app:layout_constraintTop_toBottomOf="@id/tv_best_quality"
        android:layout_marginBottom="@dimen/_5sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_splash_sign_in"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        android:text="@string/g_log_in"
        android:textColor="@color/g_black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/btn_splash_register"
        app:layout_constraintStart_toStartOf="@id/btn_splash_register"
        app:layout_constraintEnd_toEndOf="@id/btn_splash_register"
        android:layout_marginTop="@dimen/_10sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>